--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "ajv": "^6.5.4",
+    "circular-json": "^0.5.9",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5",
     "firebase-tools": "^6.2.2",
