--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "servify-backend"
+    "default": "servify-backend",
+    "Servify Backend": "servify-716c6"
   }
 }
